[gd_scene load_steps=10 format=3 uid="uid://3rrhwgyv2qp3"]

[ext_resource type="Script" uid="uid://ciockqmeym3li" path="res://scenes/GUI/main_game/reward/gui_reward_main.gd" id="1_axy1y"]
[ext_resource type="PackedScene" uid="uid://beuy7po6dtwkn" path="res://scenes/GUI/utils/gui_overlay_background.tscn" id="1_xloug"]
[ext_resource type="PackedScene" uid="uid://b5rxndhlrby0t" path="res://scenes/GUI/utils/scene_margin_container.tscn" id="2_pi043"]
[ext_resource type="PackedScene" uid="uid://dxtmp0p8vtdn6" path="res://scenes/GUI/main_game/reward/gui_reward_hp.tscn" id="2_qkwju"]
[ext_resource type="PackedScene" uid="uid://c00mbn24rioim" path="res://scenes/GUI/main_game/reward/gui_reward_gold.tscn" id="3_axy1y"]
[ext_resource type="Texture2D" uid="uid://pjdyj2bfffr6" path="res://resources/sprites/GUI/theme/contract_background.png" id="4_jo3ev"]
[ext_resource type="PackedScene" uid="uid://ctjggegiourgw" path="res://scenes/GUI/controls/buttons/gui_booster_pack_button.tscn" id="5_rqta2"]
[ext_resource type="AudioStream" uid="uid://dnjnf11sfdhai" path="res://resources/sounds/SFX/summary/reward_3.wav" id="8_jo3ev"]
[ext_resource type="PackedScene" uid="uid://d07xoskgg1bxi" path="res://scenes/GUI/main_game/reward/gui_reward_cards_main.tscn" id="8_pi043"]

[node name="GUIRewardMain" type="CanvasLayer"]
process_mode = 2
layer = 2
script = ExtResource("1_axy1y")

[node name="MainMarginContainer" parent="." instance=ExtResource("2_pi043")]
unique_name_in_owner = true

[node name="GUIOverlayBackground" parent="MainMarginContainer" instance=ExtResource("1_xloug")]
layout_mode = 2
color = Color(0.52156866, 0.52156866, 0.52156866, 0.9411765)

[node name="MarginContainer" type="MarginContainer" parent="MainMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Control" type="Control" parent="MainMarginContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="MainMarginContainer/MarginContainer/Control"]
unique_name_in_owner = true
self_modulate = Color(0.9764706, 0.9019608, 0.8117647, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_top = 12.0
offset_right = 43.0
offset_bottom = 26.0
grow_horizontal = 2
theme_type_variation = &"HeaderMedium"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MainMarginContainer/MarginContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(86, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_top = 32.0
offset_right = 43.0
offset_bottom = 119.0
grow_horizontal = 2
mouse_filter = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MainMarginContainer/MarginContainer/Control/PanelContainer"]
layout_mode = 2
texture = ExtResource("4_jo3ev")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMarginContainer/MarginContainer/Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MainMarginContainer/MarginContainer/Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GUIRewardGold" parent="MainMarginContainer/MarginContainer/Control/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_axy1y")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="GUIRewardHP" parent="MainMarginContainer/MarginContainer/Control/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_qkwju")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="GUIBoosterPackButton" parent="MainMarginContainer/MarginContainer/Control/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_rqta2")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="RewardShowingAudio" type="AudioStreamPlayer2D" parent="MainMarginContainer"]
unique_name_in_owner = true
stream = ExtResource("8_jo3ev")
volume_db = 5.0
bus = &"SFX"

[node name="GUIRewardCardsMain" parent="." instance=ExtResource("8_pi043")]
unique_name_in_owner = true
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 4.0
offset_top = 20.0
offset_right = 316.0
offset_bottom = 176.0
grow_horizontal = 1
grow_vertical = 1
